fixed padding overflow

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -12,8 +12,8 @@
 
 .social{
     display: flex;
-    justify-content: center;
-    gap: 5rem;
+    justify-content: space-between;
+    gap: 3rem;
     margin-bottom: 1rem;
 }
 
