--- a/src/styles/FooterNav.css
+++ b/src/styles/FooterNav.css
@@ -2,7 +2,7 @@
     display: none;
     background-color: black;
     justify-content: center;
-    gap: 5rem;
+    gap: 2rem;
     padding: 2rem 0 2rem 0;
     font-family: sans-serif;
 }
