--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -19,7 +19,8 @@
 .logo{
     width: 50px;
     height: 50px;
-   
+    position: absolute;
+    left: 45vw;
     
 }
 
@@ -90,13 +91,16 @@
 
 
 @media (min-width: 768px) {
-    .header{
-        padding-left: 2rem;
+
+    .logo{
+        position: relative;
+        left: 0;
     }
     
     .header-linkHub{
         display: flex;
         color: red;
+        gap: 3rem;
         align-items: center;
         font-family: sans-serif;
     }
@@ -108,13 +112,13 @@
     }
 
     .header-linkHub-title{
-        font-size: 1.5rem;
+        font-size: 1.25rem;
     }
 
     .header-links{
         display: flex;
         list-style: none;
-        gap: 5rem;
+        gap: 2rem;
        
     }
 
@@ -123,4 +127,9 @@
         font-weight: 700;
         font-size: .9rem;
     }
+}
+
+#cart-container{
+    display: flex;
+    font-family: sans-serif;
 }
